--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a href="#skills">Skills</a>
 			<a href="#projects">Projects</a>
 			<a href="#contact">Contact</a>
-			<a href="#">Resume</a>
+			<a href="https://drive.google.com/uc?export=download&id=1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC">Resume</a>
 		</nav>
 
 	<!-- 	<nav id="sidenav" class="navbar navbar-expand-lg navbar-light bg-light">
