--- a/index.html
+++ b/index.html
@@ -24,32 +24,37 @@
 			<a href="#contact">Contact</a>
 			<a href="https://drive.google.com/uc?export=download&id=1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC">Resume</a>
 		</nav>
-		<!-- <div class="container"> -->
-            <div id="titleDiv"> 
-                <h1>< JESSI HEGER ></h1> 
-                <h2 id="subtitle">Full-Stack Web Developer</h2>
+		<div class="full-width">
+            <div class="row">
+                <div class="col-12">
+                    <div id="titleDiv"> 
+                        <h1>< JESSI HEGER ></h1> 
+                    </div>
+                    <div>
+                        <h2 id="subtitle">Full-Stack Web Developer</h2>
+                    </div>
+                </div>
             </div>
-        <!-- </div> -->
+        </div>
 
 
 	<div class="container">
 		<!-- <div class="container"> -->
 			<div class="row" id="about">
-				<div class="col-sm-12">
-					<hr>
-                    <div id="openBracket">
-                        <h1> { </h1>
-                    </div>
-                    <div>
-                        <br>
-                        <br>
-					   <p><span>I believe in the power of technology to affect change.</span>
-                       <p>As a developer, I am continually driven by the idea that I can contribute to something bigger than myself, and by the understanding that the code I write is for people - both the users and my team.</p>
+				<div class="col-12">
+                    <div class="row">
+    					<hr>
+                        <div class="col-sm-2" id="openBracket">
+                            <span class="bracket"> { </span>
                         </div>
-                    <div id="closeBracket">
-                        <h1> } </h1>
-                    </div>
-					<!-- <hr> -->
+                        <div class="col-sm-8">
+    					   <span>I believe in the power of technology to affect change.</span>
+                           <span>As a developer, I am continually driven by the idea that I can contribute to something bigger than myself, and by the understanding that the code I write is for people - both the users and my team.</span>
+                        </div>
+                        <div class="col-sm-2" id="closeBracket">
+                            <span class="bracket"> } </span>
+                        </div>
+					</div>
 				</div>
 			</div>
         </div>
