--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	    <title>JESSI HEGER</title>
 	    <link rel="icon" href="code.png">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Reem+Kufi" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
@@ -25,13 +25,15 @@
 			<a href="https://drive.google.com/uc?export=download&id=1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC">Resume</a>
 		</nav>
 		<div class="full-width">
-            <div class="row">
-                <div class="col-12">
-                    <div id="titleDiv"> 
-                        <h1>< JESSI HEGER ></h1> 
-                    </div>
-                    <div>
-                        <h2 id="subtitle">Full-Stack Web Developer</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-10">
+                        <div id="titleDiv"> 
+                            <h1>< JESSI HEGER ></h1> 
+                        </div>
+                        <div>
+                            <h2 id="subtitle">Full-Stack Web Developer</h2>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -39,7 +41,7 @@
 
 
 	<div class="container">
-		<!-- <div class="container"> -->
+		<div class="container">
 			<div class="row" id="about">
 				<div class="col-12">
                     <div class="row">
@@ -48,18 +50,21 @@
                             <span class="bracket"> { </span>
                         </div>
                         <div class="col-sm-8">
-    					   <span>I believe in the power of technology to affect change.</span>
+    					   <span>I believe in the power of technology to affect change.</span><br><br>
                            <span>As a developer, I am continually driven by the idea that I can contribute to something bigger than myself, and by the understanding that the code I write is for people - both the users and my team.</span>
                         </div>
                         <div class="col-sm-2" id="closeBracket">
                             <span class="bracket"> } </span>
                         </div>
-					</div>
+                    </div>
+                        <hr>
 				</div>
 			</div>
         </div>
         <div class="container">
-		  <h2 >Projects</h2>
+        <h2>Projects</h2>
+        <div class="row justify-content-sm-center">
+        </div>
             <div id="projects">
                 <div class="row projectDiv">
 						<div class="col-5 flip-container" ontouchstart="this.classList.toggle('hover');" id="projectFlip1">
@@ -74,107 +79,97 @@
 							<br>
 							<hr>
 							<h2 class="projectTitle">remind(h)er</h2>
-							<p>Created with Node.js, Express, and MongoDB, this full-stack application facilitates women's knowledge of and access to reproductive health services.</p>
+							<p>Using Node.js, Express, and MongoDB, this full-stack application facilitates women's knowledge of and access to reproductive health services.</p>
 							<hr>
 						</div>
 						<br>
 						<br>
 				</div>
-					<div class="row projectDiv">
-						<div class="flip-container" ontouchstart="this.classList.toggle('hover');" id="projectFlip2">
-							<div class="flipper">
-								<div class="front" id="pizzaFront">
-								</div>
-								<div class="back" id="pizzaBack">
-								</div>
+				<div class="row projectDiv">
+					<div class="col-5 flip-container" ontouchstart="this.classList.toggle('hover');" id="projectFlip2">
+						<div class="flipper">
+							<div class="front" id="pizzaFront">
+							</div>
+							<div class="back" id="pizzaBack">
 							</div>
 						</div>
-						<div class="col-6 projectDescLeft projectText">
-							<br>
-							<br>
-							<hr>
-							<h2 class="projectTitle">Pizza Time</h2>
-							<p>TEST PROJECT DESCRIPTION</p>
-							<p>TEST PROJECT DESCRIPTION</p>
-							<p>TEST PROJECT DESCRIPTION</p>
-							<hr>
-						</div>
 					</div>
-				</div>
-            </div>
-        <div class="container">
-			<div class="row">
-				<div id="skills" class="col-8 offset-2">
-					<h2>Skills</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora ab fugiat consequuntur amet, quis suscipit aperiam dolore maxime nulla enim vitae doloribus delectus iste dolor similique atque quasi perferendis. Ducimus!</p>
-					<hr>
-				</div>
+					<div class="col-4 projectDescLeft projectText">
+						<br>
+						<br>
+						<hr>
+						<h2 class="projectTitle">Pizza Time</h2>
+						<p>Front-end game built with JavaScript, CSS, HTML, and the Phaser.io framework.</p>
+						<hr>
+				   </div>
+			    </div>
 			</div>
         </div>
-			<!-- <div class="row">
-				<div class="col-8 offset-2" id="contact">
-					<h2>Contact</h2>
+        <div class="container" >
+            <h2>Skills</h2>
+            <div class="row">
+				<!-- <div class="col-12 skills"> -->
+                    <div class="col">
+    					<p>Front End</p>
+                        <ul class="skills">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>jQuery</li>
+                            <li>React.js</li>
+                            <li>Bootstrap</li>
+                            <li>Materialize</li>
+                            <li>Phaser.io</li>
+                        </ul>
+                        <p>Version Control</p>
+                        <ul class="skills">
+                            <li>Git / Github</li>
+                        </ul>
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="col">
+                        <p>Back End</p>
+                        <ul class="skills">
+                            <li>Node.js</li>
+                            <li>Express.js</li>
+                            <li>PostgreSQL</li>
+                            <li>MongoDB</li>
+                            <li>Python</li>
+                        </ul>
+                        <p>Test and Deployment</p>
+                        <ul class="skills">
+                            <li>Heroku</li>
+                        </ul>
+                    </div>
+                <!-- </div> -->
+            </div>
+        </div>
+		<hr>
+		<div class="container">
+			<h2>Contact</h2>
+            <div class="row">
+                <div class="col-8 offset-2" id="contact">
 					<p>Email: <a href="mailto:jhmheger@gmail.com">jhmheger@gmail.com</a></p>
 					<p>Phone Number: (206) 650-4716</p>
 					<p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
 					<hr>
 				</div>
-			</div> -->
-    <section id="contact">
-      <div class="container">
-        <h2 >Contact Me</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn" id="sendMessageButton">Send</button>
-              </div>
-            </form>
-          </div>
+			</div>
         </div>
-      </div>
-    </section>
-		<footer>
-			<ul>
-				<li class="footerLi">Created by Jessi Heger 2018</li>
-				<a id="githublink" href="https://github.com/jessiheger"><li class="footerLi"><img src="github.png">  Github</li></a>
-				<a id="linkedin" href="https://www.linkedin.com/in/jessicaheger/"><li class="footerLi"><img src="linkedin.png">  LinkedIn</li></a>
-			</ul>
-		</footer>
-	</div>
+        
+
+
+
+
+    		<footer>
+    			<ul>
+    				<li class="footerLi">Created by Jessi Heger 2018</li>
+    				<a id="githublink" href="https://github.com/jessiheger"><li class="footerLi"><img src="github.png">  Github</li></a>
+    				<a id="linkedin" href="https://www.linkedin.com/in/jessicaheger/"><li class="footerLi"><img src="linkedin.png">  LinkedIn</li></a>
+    			</ul>
+    		</footer>
 	</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="app.js" type="text/javascript"></script>
 </html>
