--- a/portfolio2.html
+++ b/portfolio2.html
@@ -31,36 +31,52 @@
                 </div>
             </div>
             <span class="nav-headers pull-right">
-                <span class="nav-section">About</span>
-                <span class="nav-section">Projects</span>
-                <span class="nav-section">Skills</span>
-                <span class="nav-section">Contact</span>
+                <span class="nav-section"><a href="#about">About</a></span>
+                <span class="nav-section"><a href="#projects">Projects</a></span>
+                <span class="nav-section"><a href="#skills">Skills</a></span>
+                <span class="nav-section"><a href="#contact">Contact</a></span>
             </span>
             <div class="vl-large"></div>
             <div id="title-div">
                 <div class="name">
-                    <h1>jessi heger</h1>
+                    <h1 >jessi heger</h1>
                 </div>
-                <div class="sub-title"> 
+                <div class="tracking-in-expand-fwd sub-title"> 
                     <h2>< full stack web developer ></h2>
                 </div>
             </div>
-            <h1>about</h1>
             <div id="about">
+            <h1>about</h1>
                 <span>I believe in the power of technology to affect change.</span><br><br>
                 <span>As a developer, I am continually driven by the idea that I can contribute to something bigger than myself, and by the understanding that the code I write is for people - both the users and my team.</span>
             </div>
-            <h1>projects</h1>
+            <hr>
             <div id="projects">
+            <h1>projects</h1>
                 <div class="remindher">
                     <h2>remind(h)er</h2>
-                    <img class="mockups" src="images/remindher.jpeg">
+                    <img class="mockups" src="images/remindher_single.jpeg">
                     <span class="project-desc">Using Node.js, Express, and MongoDB, this full-stack application facilitates women's knowledge of and access to reproductive health services.<br>
                     <a href="https://remindher.herokuapp.com">Live Demo</a></span>
                 </div>
-            <h1>skills</h1>
+                <div class="popshop">
+                    <h2>PopShop</h2>
+                    <img class="mockups" src="images/popshop.jpeg">
+                    <span class="project-desc">An e-commerce site built wtih Python, Django, and a SQL database, with the aim of featuring local business/vendors on a roatating basis; a virtual "pop up shop".<br>
+                    <a href="#">Live Demo</a></span>
+                </div>
+                <div class="pizzatime">
+                    <h2>Pizza Time!</h2>
+                    <img class="mockups" src="images/pizzatime.jpeg">
+                    <span class="project-desc">Multi-level front-end game built with HTML, CSS, JavaScript and Phaser.io.<br>
+                    <a href="https://jessiheger.github.io/project1_pizza"/>Live Demo</a></span>
+                </div>
+            <hr>
             <div id="skills">
-                <p>Front End</p>
+            <h1>skills</h1>
+                <div class="row">
+                    <div class="col-5">
+                        <p>Front End</p>
                         <ul class="skills">
                             <li>HTML</li>
                             <li>CSS</li>
@@ -72,26 +88,34 @@
                             <li>Phaser.io</li>
                         </ul>
                         <p>Version Control</p>
-                <p>Back End</p>
-                    <ul class="skills">
-                        <li>Node.js</li>
-                        <li>Express.js</li>
-                        <li>PostgreSQL</li>
-                        <li>MongoDB</li>
-                        <li>Python</li>
-                    </ul>
-                <p>Test and Deployment</p>
-                    <ul class="skills">
-                        <li>Heroku</li>
-                    </ul>
+                        <ul>
+                            <li>Git/ GitHub</li>
+                        </ul>
+                    </div>
+                    <div class="col-5">
+                        <p>Back End</p>
+                        <ul class="skills">
+                            <li>Node.js</li>
+                            <li>Express.js</li>
+                            <li>PostgreSQL</li>
+                            <li>MongoDB</li>
+                            <li>Python</li>
+                        </ul>
+                        <p>Test and Deployment</p>
+                        <ul class="skills">
+                            <li>Heroku</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <h1>contact</h1>
+             <hr>
             <div id="contact">
+            <h1>contact</h1>
                 <div>
                     <p>Email: <a href="mailto:jhmheger@gmail.com">jhmheger@gmail.com</a></p>
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
-                    <hr>
                 </div>
             </div>
+        <hr>
     </body>
