--- a/portfolio2.html
+++ b/portfolio2.html
@@ -62,7 +62,7 @@
                 <div class="popshop">
                     <h2>PopShop</h2>
                     <img class="mockups" src="images/popshop.jpeg">
-                    <span class="project-desc">An e-commerce site built wtih Python, Django, and a SQL database, with the aim of featuring local business/vendors on a roatating basis; a virtual "pop up shop".<br>
+                    <span class="project-desc">An e-commerce site built wtih Python, Django, and SQL Database, with the aim of featuring local businesses/vendors on a roatating basis; a virtual "pop up shop".<br>
                     <a href="#">Live Demo</a></span>
                 </div>
                 <div class="pizzatime">
