slight styling changes

--- a/portfolio2.html
+++ b/portfolio2.html
@@ -63,7 +63,7 @@
                     <h2>PopShop</h2>
                     <img class="mockups" src="images/popshop.jpeg">
                     <span class="project-desc">An e-commerce site built wtih Python, Django, and SQL Database, with the aim of featuring local businesses/vendors on a roatating basis; a virtual "pop up shop".<br>
-                    <a href="#">Live Demo</a></span>
+                    <a href="#">Live Demo - coming soon!</a></span>
                 </div>
                 <div class="pizzatime">
                     <h2>Pizza Time!</h2>
@@ -115,6 +115,7 @@
                     <p>Email: <a href="mailto:jhmheger@gmail.com">jhmheger@gmail.com</a></p>
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">/jessicaheger/</a></p>
                 </div>
             </div>
         <hr>
