adding resume link

--- a/portfolio2.html
+++ b/portfolio2.html
@@ -22,8 +22,10 @@
                     <span class="numbers">02</span>
                     <span class="numbers">03</span>
                     <span class="numbers">04</span>
+                    <span class="numbers">05</span>                    
                     </div> 
                 <div class="nav-lines">
+                    <span class="vl-small"></span>
                     <span class="vl-small"></span>
                     <span class="vl-small"></span>
                     <span class="vl-small"></span>
@@ -35,6 +37,7 @@
                 <span class="nav-section"><a href="#projects">Projects</a></span>
                 <span class="nav-section"><a href="#skills">Skills</a></span>
                 <span class="nav-section"><a href="#contact">Contact</a></span>
+                <span class="nav-section"><a href="#contact">Resume</a></span>
             </span>
             <div class="vl-large"></div>
             <div id="title-div">
@@ -116,6 +119,7 @@
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">/jessicaheger/</a></p>
+                    <p>Resume<a href=""></a><p>
                 </div>
             </div>
         <hr>
