--- a/portfolio2.html
+++ b/portfolio2.html
@@ -119,7 +119,7 @@
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">/jessicaheger/</a></p>
-                    <p>Resume<a href=""></a><p>
+                    <p>Resume<a href="#"></a><p>
                 </div>
             </div>
         <hr>
