--- a/index.html
+++ b/index.html
@@ -15,30 +15,33 @@
         <div class="container">
             <div class="row">
                 <div class="logo">
-                    <div class="initial-circle">jh</div>
+                    <div class="initial-circle"><a href="https://jessiheger.github.io">jh</a></div>
                 </div>
-                <div class="pull-right">
-                    <span class="numbers">01</span>
-                    <span class="numbers">02</span>
-                    <span class="numbers">03</span>
-                    <span class="numbers">04</span>
-                    <span class="numbers">05</span>                    
+                <span id="nav" class="pull-right">
+                    <div class="pull-right">
+                        <span class="numbers">01</span>
+                        <span class="numbers">02</span>
+                        <span class="numbers">03</span>
+                        <span class="numbers">04</span>
+                        <span class="numbers">05</span>                    
                     </div> 
-                <div class="nav-lines">
-                    <span class="vl-small"></span>
-                    <span class="vl-small"></span>
-                    <span class="vl-small"></span>
-                    <span class="vl-small"></span>
-                    <span class="vl-small"></span>
-                </div>
-            </div>
-            <span class="nav-headers pull-right">
-                <span class="nav-section"><a href="#about">About</a></span>
-                <span class="nav-section"><a href="#projects">Projects</a></span>
-                <span class="nav-section"><a href="#skills">Skills</a></span>
-                <span class="nav-section"><a href="#contact">Contact</a></span>
-                <span class="nav-section"><a href="#contact">Resume</a></span>
-            </span>
+                    <div class="nav-lines">
+                        <span class="vl-small"></span>
+                        <span class="vl-small"></span>
+                        <span class="vl-small"></span>
+                        <span class="vl-small"></span>
+                        <span class="vl-small"></span>
+                    </div>
+                    <span class="nav-headers pull-right">
+                        <span class="nav-section"><a href="#about">About</a></span>
+                        <span class="nav-section"><a href="#projects">Projects</a></span>
+                        <span class="nav-section"><a href="#skills">Skills</a></span>
+                        <span class="nav-section"><a href="#contact">Contact</a></span>
+                        <span class="nav-section"><a href="https://drive.google.com/file/d/1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC/view?usp=sharing" target="_blank">Resume</a></span>
+                    </span>
+                </span>
+            </div> 
+            <div>
             <div class="vl-large"></div>
             <div id="title-div">
                 <div class="name">
@@ -55,7 +58,7 @@
             </div>
             <hr>
             <div id="projects">
-            <h1>projects</h1>
+                <h1>projects</h1>
                 <div class="remindher">
                     <h2>remind(h)er</h2>
                     <img class="mockups" src="images/remindher_single.jpeg">
@@ -71,14 +74,17 @@
                 <div class="pizzatime">
                     <h2>Pizza Time!</h2>
                     <img class="mockups" src="images/pizzatime.jpeg">
-                    <span class="project-desc">Multi-level front-end game built with HTML, CSS, JavaScript and Phaser.io.<br>
-                    <a href="https://jessiheger.github.io/project1_pizza"/>Live Demo</a></span>
+                    <span class="project-desc">Multi-level front-end game built with HTML, CSS, JavaScript and Phaser.io.
+                        <br>
+                        <a href="https://jessiheger.github.io/project1_pizza"/>Live Demo</a>
+                    </span>
                 </div>
+            </div>
             <hr>
             <div id="skills">
             <h1>skills</h1>
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-md-5">
                         <p>Front End</p>
                         <ul class="skills">
                             <li>HTML</li>
@@ -95,7 +101,7 @@
                             <li>Git/ GitHub</li>
                         </ul>
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-5">
                         <p>Back End</p>
                         <ul class="skills">
                             <li>Node.js</li>
@@ -119,7 +125,7 @@
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">/jessicaheger/</a></p>
-                    <p>Resume<a href="#"></a><p>
+                    <p><a href="https://drive.google.com/file/d/1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC/view?usp=sharing" target="_blank">Resume</a></p>
                 </div>
             </div>
         <hr>
