adding more responsiveness

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                     </span>
                 </span>
             </div> 
-            <div>
             <div class="vl-large"></div>
             <div id="title-div">
                 <div class="name">
@@ -52,7 +51,7 @@
                 </div>
             </div>
             <div id="about">
-            <h1>about</h1>
+                <h1>about</h1>
                 <span>I believe in the power of technology to affect change.</span><br><br>
                 <span>As a developer, I am continually driven by the idea that I can contribute to something bigger than myself, and by the understanding that the code I write is for people - both the users and my team.</span>
             </div>
@@ -60,31 +59,53 @@
             <div id="projects">
                 <h1>projects</h1>
                 <div class="remindher">
-                    <h2>remind(h)er</h2>
-                    <img class="mockups" src="images/remindher_single.jpeg">
-                    <span class="project-desc">Using Node.js, Express, and MongoDB, this full-stack application facilitates women's knowledge of and access to reproductive health services.<br>
-                    <a href="https://remindher.herokuapp.com">Live Demo</a></span>
+                    <div class="row">
+                        <h2>remind(h)er</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8 col-12">
+                            <img class="mockups" src="images/remindher_single.jpeg">
+                        </div>
+                        <div class="col-md-4 col-12">
+                            <span class="project-desc">Using Node.js, Express, and MongoDB, this full-stack application facilitates women's knowledge of and access to reproductive health services.<br>
+                            <a href="https://remindher.herokuapp.com">Live Demo</a></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="popshop">
-                    <h2>PopShop</h2>
-                    <img class="mockups" src="images/popshop.jpeg">
-                    <span class="project-desc">An e-commerce site built wtih Python, Django, and SQL Database, with the aim of featuring local businesses/vendors on a roatating basis; a virtual "pop up shop".<br>
-                    <a href="#">Live Demo - coming soon!</a></span>
+                    <div class="row">
+                        <h2>PopShop</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8 col-12">
+                            <img class="mockups" src="images/popshop.jpeg">
+                        </div>
+                        <div class="col-md-4 col-12">
+                            <span class="project-desc">An e-commerce site built wtih Python, Django, and SQL Database, with the aim of featuring local businesses/vendors on a roatating basis; a virtual "pop up shop".<br>
+                            <a href="#">Live Demo - coming soon!</a></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="pizzatime">
-                    <h2>Pizza Time!</h2>
-                    <img class="mockups" src="images/pizzatime.jpeg">
-                    <span class="project-desc">Multi-level front-end game built with HTML, CSS, JavaScript and Phaser.io.
-                        <br>
-                        <a href="https://jessiheger.github.io/project1_pizza"/>Live Demo</a>
-                    </span>
+                    <div class="row">
+                        <h2>Pizza Time!</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8 col-12">
+                            <img class="mockups" src="images/pizzatime.jpeg">
+                        </div>
+                        <div class="col-md-4 col-12">
+                            <span class="project-desc">Multi-level front-end game built with HTML, CSS, JavaScript and Phaser.io.<br>
+                            <a href="https://jessiheger.github.io/project1_pizza"/>Live Demo</a></span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <hr>
             <div id="skills">
-            <h1>skills</h1>
+                <h1>skills</h1>
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                         <p>Front End</p>
                         <ul class="skills">
                             <li>HTML</li>
@@ -101,7 +122,7 @@
                             <li>Git/ GitHub</li>
                         </ul>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                         <p>Back End</p>
                         <ul class="skills">
                             <li>Node.js</li>
@@ -117,9 +138,9 @@
                     </div>
                 </div>
             </div>
-             <hr>
+            <hr>
             <div id="contact">
-            <h1>contact</h1>
+                <h1>contact</h1>
                 <div>
                     <p>Email: <a href="mailto:jhmheger@gmail.com">jhmheger@gmail.com</a></p>
                     <p>Phone Number: (206) 650-4716</p>
