--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>JESSI HEGER</title>
-        <link rel="icon" href="code.png">
+        <title>Jessi Heger</title>
+        <link rel="icon" href="images/code.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Sacramento|Nixie+One|Poiret+One" rel="stylesheet">
@@ -43,7 +43,7 @@
             </div> 
             <div class="vl-large"></div>
             <div id="title-div">
-                <div class="name">
+                <div>
                     <h1 >jessi heger</h1>
                 </div>
                 <div class="tracking-in-expand-fwd sub-title"> 
@@ -145,7 +145,7 @@
                     <p>Email: <a href="mailto:jhmheger@gmail.com">jhmheger@gmail.com</a></p>
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">/jessicaheger/</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">linkedin.com/in/jessicaheger</a></p>
                     <p><a href="https://drive.google.com/file/d/1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC/view?usp=sharing" target="_blank">Resume</a></p>
                 </div>
             </div>
