revising About section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="about">
                 <h1>about</h1>
                 <span>I believe in the power of technology to affect change.</span><br><br>
-                <span>As a developer, I am continually driven by the idea that I can contribute to something bigger than myself, and by the understanding that the code I write is for people - both the users and my team.</span>
+                <span>As a developer, I thrive knowing that that the code I write is for people - both the users and my team. With a public policy background and two years of supporting the people behind amazing startups, I combine my analytical, operations, and technical skills with the drive to do something better. </span>
             </div>
             <hr>
             <div id="projects">
@@ -93,6 +93,8 @@
                     <div class="row">
                         <div class="col-md-8 col-12">
                             <img class="mockups" src="images/pizzatime.jpeg">
+                            <!-- <div style="width:100%;height:0;padding-bottom:46%;position:relative;"><iframe src="https://giphy.com/embed/29pcgV6tmAh4l3gYKk" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed mockups" allowFullScreen></iframe></div> -->
+                            <!-- <iframe src="https://giphy.com/embed/29pcgV6tmAh4l3gYKk"></iframe> -->
                         </div>
                         <div class="col-md-4 col-12">
                             <span class="project-desc">Multi-level front-end game built with HTML, CSS, JavaScript and Phaser.io.<br>
