revising About section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="about">
                 <h1>about</h1>
                 <span>I believe in the power of technology to affect change.</span><br><br>
-                <span>As a developer, I thrive knowing that that the code I write is for people - both the users and my team. With a public policy background and two years of supporting the people behind amazing startups, I combine my analytical, operations, and technical skills with the drive to do something better. </span>
+                <span>As a developer, I thrive knowing that that the code I write is for people - both the users and my team. With a public policy background and two years of supporting the people behind amazing startups, I combine my analytical, operations, and technical skills with the drive to do something bigger. </span>
             </div>
             <hr>
             <div id="projects">
