--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="vl-large"></div>
             <div id="title-div">
                 <div>
-                    <h1 >jessi heger</h1>
+                    <h1>jessi heger</h1>
                 </div>
                 <div class="tracking-in-expand-fwd sub-title"> 
                     <h2>< full stack web developer ></h2>
@@ -53,7 +53,7 @@
             <div id="about">
                 <h1>about</h1>
                 <span>I believe in the power of technology to affect change.</span><br><br>
-                <span>As a developer, I thrive knowing that that the code I write is for people - both the users and my team. With a public policy background and two years of supporting the people behind amazing startups, I combine my analytical, operations, and technical skills with the drive to do something bigger. </span>
+                <span>As a developer, I thrive knowing that that the code I write is for people - both the users and my team. With a public policy background and two years of supporting the operations and people behind amazing startups, I combine my analytical and technical skills with the drive to do something bigger. </span>
             </div>
             <hr>
             <div id="projects">
@@ -64,10 +64,37 @@
                     </div>
                     <div class="row">
                         <div class="col-md-8 col-12">
-                            <img class="mockups" src="images/remindher_single.jpeg">
+                            <a tabindex="0" role="button" data-toggle="modal" data-target="#remindherModal"><img class="mockups" src="images/remindher_single.jpeg"></a>
                         </div>
+
+            <!-- Modal -->
+                            <div class="modal fade" id="remindherModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                              <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                      <span aria-hidden="true">&times;</span>
+                                    </button>
+                                  </div>
+                                  <div class="modal-body">
+                                    TEST STUB
+                                  </div>
+                                  <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- <div style="width:100%;height:0;padding-bottom:48%;position:relative;"><iframe src="https://giphy.com/embed/1YiIX0F3TMK6an3gmd" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div> -->
                         <div class="col-md-4 col-12">
                             <span class="project-desc">Using Node.js, Express, and MongoDB, this full-stack application facilitates women's knowledge of and access to reproductive health services.<br>
+
+            <!-- Button trigger modal -->
+                            <button id="pleasework" type="button" class="btn btn-primary" data-toggle="modal" data-target="#remindherModal">GIF</button>
+
+                            |
                             <a href="https://remindher.herokuapp.com">Live Demo</a></span>
                         </div>
                     </div>
@@ -79,9 +106,10 @@
                     <div class="row">
                         <div class="col-md-8 col-12">
                             <img class="mockups" src="images/popshop.jpeg">
+                            <!-- <div style="width:100%;height:0;padding-bottom:46%;position:relative;"><iframe src="https://giphy.com/embed/30pyg9klkYyXiGK6q7" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div> -->
                         </div>
                         <div class="col-md-4 col-12">
-                            <span class="project-desc">An e-commerce site built wtih Python, Django, and SQL Database, with the aim of featuring local businesses/vendors on a roatating basis; a virtual "pop up shop".<br>
+                            <span class="project-desc">An e-commerce site built wtih Python, Django, and PostgreSQL Database, with the aim of featuring local businesses/vendors on a roatating basis; a virtual "pop up shop".<br>
                             <a href="#">Live Demo - coming soon!</a></span>
                         </div>
                     </div>
@@ -123,6 +151,10 @@
                         <ul>
                             <li>Git/ GitHub</li>
                         </ul>
+                        <p>Test and Deployment</p>
+                        <ul class="skills">
+                            <li>Heroku</li>
+                        </ul>
                     </div>
                     <div class="col-sm-5">
                         <p>Back End</p>
@@ -133,9 +165,12 @@
                             <li>MongoDB</li>
                             <li>Python</li>
                         </ul>
-                        <p>Test and Deployment</p>
+                        <p>Other</p>
                         <ul class="skills">
-                            <li>Heroku</li>
+                            <li>Agile</li>
+                            <li>Operations</li>
+                            <li>Budgeting</li>
+                            <li>Onboarding</li>
                         </ul>
                     </div>
                 </div>
@@ -152,4 +187,9 @@
                 </div>
             </div>
         <hr>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
+
+
     </body>
