--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                               </div>
                             </div>
                         <div class="col-md-4 col-12">
-                            <span class="project-desc">Using Node.js, Express, and MongoDB, this full-stack application facilitates women's knowledge of and access to reproductive health services.<br>
+                            <span class="project-desc">Using Node.js, Express, and MongoDB, this full-stack application facilitates women's access to and management of reproductive health services.<br>
 
                         <!-- Button trigger modal -->
                             <button id="pleasework" type="button" class="btn btn-primary" data-toggle="modal" data-target="#remindherModal">GIF</button>
@@ -125,7 +125,7 @@
 
 
                         <div class="col-md-4 col-12">
-                            <span class="project-desc">An e-commerce site built wtih Python, Django, and PostgreSQL Database, with the aim of featuring local businesses/vendors on a roatating basis; a virtual "pop up shop".<br>
+                            <span class="project-desc">An e-commerce site built wtih Python, Django, and PostgreSQL Database, with the aim of featuring local businesses/vendors on a rotating basis; a virtual "pop up shop".<br>
                             <button id="pleasework" type="button" class="btn btn-primary" data-toggle="modal" data-target="#popshopModal">GIF</button>
                             |
                             <a href="#">Live Demo - coming soon!</a></span>
