--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
                         <div class="col-md-4 col-12">
-                            <span class="project-desc">An e-commerce site built wtih Python, Django, and PostgreSQL Database, with the aim of featuring local businesses/vendors on a rotating basis; a virtual "pop up shop".<br>
+                            <span class="project-desc">An e-commerce site built with Python, Django, and PostgreSQL with the aim of featuring local businesses/vendors on a rotating basis; a virtual "pop up shop".<br>
                             <button id="pleasework" type="button" class="btn btn-primary" data-toggle="modal" data-target="#popshopModal">GIF</button>
                             |
                             <a href="#">Live Demo - coming soon!</a></span>
