--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                             <span class="project-desc">An e-commerce site built with Python, Django, and PostgreSQL with the aim of featuring local businesses/vendors on a rotating basis; a virtual "pop up shop".<br>
                             <button id="pleasework" type="button" class="btn btn-primary" data-toggle="modal" data-target="#popshopModal">GIF</button>
                             |
-                            <a href="#">Live Demo - coming soon!</a></span>
+                            <a href="https://popshop-site.herokuapp.com/">Live Demo</a></span><br>
+                            <p> username: test | password: testtest</p>
                         </div>
                     </div>
                 </div>
