added username and pw to remindher

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                             <button id="pleasework" type="button" class="btn btn-primary" data-toggle="modal" data-target="#remindherModal">GIF</button>
                             |
                             <a href="https://remindher.herokuapp.com">Live Demo</a></span>
+                            <p> username: user | password: useruser</p>
                         </div>
                     </div>
                 </div>
