--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
                         <ul class="skills">
                             <li>Agile</li>
                             <li>Operations</li>
-                            <li>Budgeting</li>
                             <li>Onboarding</li>
                         </ul>
                     </div>
@@ -222,7 +221,8 @@
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">linkedin.com/in/jessicaheger</a></p>
-                    <p><a href="https://drive.google.com/file/d/1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC/view?usp=sharing" target="_blank">Resume</a></p>
+                    <!-- <p><a href="https://drive.google.com/file/d/1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC/view?usp=sharing" target="_blank">Resume</a></p> -->
+                    <p><a href="https://drive.google.com/file/d/134ggdSKFxZNzDeUHq-2c0sayCTv98mI_/view?usp=sharing" target="_blank">Resume</a></p>
                 </div>
             </div>
         <hr>
