--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="logo">
-                    <div class="initial-circle"><a href="https://jessiheger.github.io">jh</a></div>
-                </div>
-                <span id="nav" class="pull-right">
-                    <div class="pull-right">
+                <!-- <span class="logo"> -->
+                    <span class="initial-circle"><a href="https://jessiheger.github.io">jh</a></span>
+                <!-- </span> -->
+                <span class="nav-span">
+                    <div>
                         <span class="numbers">01</span>
                         <span class="numbers">02</span>
                         <span class="numbers">03</span>
@@ -32,12 +32,12 @@
                         <span class="vl-small"></span>
                         <span class="vl-small"></span>
                     </div>
-                    <span class="nav-headers pull-right">
+                    <span class="nav-headers">
                         <span class="nav-section"><a href="#about">About</a></span>
                         <span class="nav-section"><a href="#projects">Projects</a></span>
                         <span class="nav-section"><a href="#skills">Skills</a></span>
                         <span class="nav-section"><a href="#contact">Contact</a></span>
-                        <span class="nav-section"><a href="https://drive.google.com/file/d/1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC/view?usp=sharing" target="_blank">Resume</a></span>
+                        <span class="nav-section"><a href="https://drive.google.com/file/d/134ggdSKFxZNzDeUHq-2c0sayCTv98mI_/view" target="_blank">Resume</a></span>
                     </span>
                 </span>
             </div> 
@@ -93,7 +93,7 @@
                             <button id="pleasework" type="button" class="btn btn-primary" data-toggle="modal" data-target="#remindherModal">GIF</button>
                             |
                             <a href="https://remindher.herokuapp.com">Live Demo</a></span>
-                            <p> username: user | password: useruser</p>
+                            <p> email: user@user.com | password: useruser</p>
                         </div>
                     </div>
                 </div>
@@ -203,6 +203,7 @@
                             <li>PostgreSQL</li>
                             <li>MongoDB</li>
                             <li>Python</li>
+                            <li>Django</li>
                         </ul>
                         <p>Other</p>
                         <ul class="skills">
@@ -221,8 +222,7 @@
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">linkedin.com/in/jessicaheger</a></p>
-                    <!-- <p><a href="https://drive.google.com/file/d/1a2omMlQ1ur6pK-0BxLAQSDM5cgaRgECC/view?usp=sharing" target="_blank">Resume</a></p> -->
-                    <p><a href="https://drive.google.com/file/d/134ggdSKFxZNzDeUHq-2c0sayCTv98mI_/view?usp=sharing" target="_blank">Resume</a></p>
+                    <p><a href="https://drive.google.com/file/d/134ggdSKFxZNzDeUHq-2c0sayCTv98mI_/view" target="_blank">Resume</a></p>
                 </div>
             </div>
         <hr>
