--- a/index.html
+++ b/index.html
@@ -217,12 +217,13 @@
             <hr>
             <div id="contact">
                 <h1>contact</h1>
-                <div>
+                <div class="contact-info">
                     <p>Email: <a href="mailto:jhmheger@gmail.com">jhmheger@gmail.com</a></p>
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">linkedin.com/in/jessicaheger</a></p>
                     <p><a href="https://drive.google.com/file/d/134ggdSKFxZNzDeUHq-2c0sayCTv98mI_/view" target="_blank">Resume</a></p>
+                    <a href="https://imgur.com/xiQeyHI"><img src="https://i.imgur.com/xiQeyHIb.jpg" title="source: imgur.com" /></a>
                 </div>
             </div>
         <hr>
