--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <p>Phone Number: (206) 650-4716</p>
                     <p>Github: <a href="https://github.com/jessiheger">@jessiheger</a></p>
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/jessicaheger/">linkedin.com/in/jessicaheger</a></p>
-                    <p><a href="https://drive.google.com/file/d/134ggdSKFxZNzDeUHq-2c0sayCTv98mI_/view" target="_blank">Resume</a></p>
+                    <p><a href="https://drive.google.com/file/d/1YpeXBoVIWlxbcOcOugkS8xmwCKf6be6l/view?usp=sharing" target="_blank">Resume</a></p>
                     <a href="https://imgur.com/xiQeyHI"><img src="https://i.imgur.com/xiQeyHIb.jpg" title="source: imgur.com" /></a>
                 </div>
             </div>
