--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="nav-section"><a href="#projects">Projects</a></span>
                         <span class="nav-section"><a href="#skills">Skills</a></span>
                         <span class="nav-section"><a href="#contact">Contact</a></span>
-                        <span class="nav-section"><a href="https://drive.google.com/file/d/134ggdSKFxZNzDeUHq-2c0sayCTv98mI_/view" target="_blank">Resume</a></span>
+                        <span class="nav-section"><a href="https://drive.google.com/file/d/1YpeXBoVIWlxbcOcOugkS8xmwCKf6be6l/view?usp=sharing" target="_blank">Resume</a></span>
                     </span>
                 </span>
             </div> 
